python/testData/quickFixes/PyAddImportQuickFixTest/availableForUnqualifiedDecoratorWithoutArguments/main.py
@<error descr="Unresolved reference 'pytest'">py<caret>test</error>
def test_skipped():
    pass